env configuration for digiflaz

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ DIGIFLAZ_USER=username-digiflaz-anda
 DIGIFLAZ_DEV_KEY=development-key-digiflaz-anda
 DIGIFLAZ_PROD_KEY=production-key-digiflaz-anda
 DIGIFLAZ_URL=https://api.digiflazz.com/v1
+
+#digiflaz mode development|production
+#default development
+DIGIFLAZ_MODE=development
